restructure partition tutorial

--- a/tutorial_TeX/RB_Partition_Tutorial/RB_Partition_Tutorial.tex
+++ b/tutorial_TeX/RB_Partition_Tutorial/RB_Partition_Tutorial.tex
@@ -16,8 +16,27 @@
 
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
-\input{RB_Partition_Tutorial_content}
+\input{RB_Partition_Tutorial_content_0}
+\input{RB_Partition_Tutorial_content_1}
+\input{RB_Partition_Tutorial_content_2}
+\input{RB_Partition_Tutorial_content_3}
 
 Version dated: \today
+
+
+
+\vspace{5cm}
+Questions about this tutorial can be directed to: \\\vspace{-10mm}
+\begin{itemize}
+\item Tracy Heath (email: \href{mailto:tracyh@berkeley.edu}{tracyh@berkeley.edu}) \\\vspace{-8mm}
+\item Sebastian H\"{o}hna (email: \href{mailto:sebastian.hoehna@gmail.com}{sebastian.hoehna@gmail.com}) \\\vspace{-8mm}
+\item Michael Landis (email: \href{mailto:mlandis@berkeley.edu}{mlandis@berkeley.edu}) \\\vspace{-8mm} 
+\item Brian R. Moore (email: \href{mailto:brianmoore@ucdavis.edu}{brianmoore@ucdavis.edu}) \\\vspace{-8mm}
+\end{itemize}
+
+
+\bibliographystyle{sysbio}
+\bibliography{\ResourcePath refs}
+
 
 \end{document}
